--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "card-go",
     "slug": "card-go",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -14,7 +14,11 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.aldrnmrsd.cardgo"
+      "bundleIdentifier": "com.aldrnmrsd.cardgo",
+      "buildNumber": "1.0.1",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -22,13 +26,23 @@
         "backgroundColor": "#ffffff"
       },
       "package": "com.aldrnmrsd.cardgo",
+      "versionCode": 2,
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/favicon.png",
+      "name": "Card Go",
+      "shortName": "Card Go",
+      "display": "standalone",
+      "backgroundColor": "#ffffff",
+      "themeColor": "#4F46E5",
+      "startUrl": "/",
+      "bundler": "metro"
     },
-    "plugins": ["expo-font"],
+    "plugins": [
+      "expo-font"
+    ],
     "extra": {
       "eas": {
         "projectId": "b0a34643-a9ac-4c13-a350-a45ebb87d85b"
