--- a/vercel.json
+++ b/vercel.json
@@ -4,9 +4,11 @@
   "outputDirectory": "dist",
   "cleanUrls": true,
   "framework": null,
-  "routes": [
-    { "handle": "filesystem" },
-    { "src": "/(.*)", "dest": "/index.html" }
+  "rewrites": [
+    {
+      "source": "/((?!_expo|assets|favicon.ico|manifest.json|service-worker.js).*)",
+      "destination": "/index.html"
+    }
   ],
   "headers": [
     {
