--- a/vercel.json
+++ b/vercel.json
@@ -5,10 +5,12 @@
   "cleanUrls": true,
   "framework": null,
   "rewrites": [
-    {
-      "source": "/((?!_expo|assets|favicon.ico|manifest.json|service-worker.js).*)",
-      "destination": "/index.html"
-    }
+    { "source": "/_expo/(.*)", "destination": "/_expo/$1" },
+    { "source": "/assets/(.*)", "destination": "/assets/$1" },
+    { "source": "/service-worker.js", "destination": "/service-worker.js" },
+    { "source": "/manifest.json", "destination": "/manifest.json" },
+    { "source": "/favicon.ico", "destination": "/favicon.ico" },
+    { "source": "/(.*)", "destination": "/index.html" }
   ],
   "headers": [
     {
