--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,18 @@
 
   "rewrites": [
     {
+      "source": "/_expo/(.*)",
+      "destination": "/_expo/$1"
+    },
+    {
+      "source": "/assets/(.*)",
+      "destination": "/assets/$1"
+    },
+    {
+      "source": "/icons/(.*)",
+      "destination": "/icons/$1"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
