fix PWA error stuck

--- a/vercel.json
+++ b/vercel.json
@@ -21,6 +21,10 @@
       "destination": "/icons/$1"
     },
     {
+      "source": "/privacy",
+      "destination": "/privacy.html"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
