--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "build:web": "expo export --platform web"
+    "build:web": "expo export --platform web && cp -r public/* dist/"
   },
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
