fix: simplify vercel rewrites

--- a/vercel.json
+++ b/vercel.json
@@ -9,14 +9,8 @@
   "framework": null,
 
   "rewrites": [
-    {
-      "source": "/privacy",
-      "destination": "/privacy/index.html"
-    },
-    {
-      "source": "/((?!_expo|assets|icons|privacy|service-worker|manifest|favicon).*)",
-      "destination": "/index.html"
-    }
+    { "source": "/privacy", "destination": "/privacy/index.html" },
+    { "source": "/(.*)", "destination": "/index.html" }
   ],
 
   "headers": [
@@ -27,40 +21,22 @@
           "key": "Cache-Control",
           "value": "public, max-age=0, must-revalidate"
         },
-        {
-          "key": "Service-Worker-Allowed",
-          "value": "/"
-        }
+        { "key": "Service-Worker-Allowed", "value": "/" }
       ]
     },
     {
       "source": "/manifest.json",
       "headers": [
-        {
-          "key": "Content-Type",
-          "value": "application/manifest+json"
-        },
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=86400"
-        }
+        { "key": "Content-Type", "value": "application/manifest+json" },
+        { "key": "Cache-Control", "value": "public, max-age=86400" }
       ]
     },
     {
       "source": "/(.*)",
       "headers": [
-        {
-          "key": "X-Content-Type-Options",
-          "value": "nosniff"
-        },
-        {
-          "key": "X-Frame-Options",
-          "value": "DENY"
-        },
-        {
-          "key": "X-XSS-Protection",
-          "value": "1; mode=block"
-        }
+        { "key": "X-Content-Type-Options", "value": "nosniff" },
+        { "key": "X-Frame-Options", "value": "DENY" },
+        { "key": "X-XSS-Protection", "value": "1; mode=block" }
       ]
     }
   ]
