--- a/app.json
+++ b/app.json
@@ -2,60 +2,37 @@
   "expo": {
     "name": "Card Go",
     "slug": "card-go",
-    "version": "1.0.2",
+    "version": "1.0.3",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/icon-new2.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/splash-new.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#00A896"
     },
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.aldrnmrsd.cardgo",
-      "buildNumber": "1.0.2",
+      "buildNumber": "1.0.3",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
       }
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "foregroundImage": "./assets/icon-new2.png",
+        "backgroundColor": "#00A896"
       },
       "package": "com.aldrnmrsd.cardgo",
-      "versionCode": 3,
+      "versionCode": 4,
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false
     },
     "web": {
       "favicon": "./assets/favicon.png",
-      "name": "Card Go - Credit Card Tracker",
-      "shortName": "Card Go",
-      "description": "Lacak kartu kredit Anda dengan mudah dan aman. Offline-first, privacy-focused.",
-      "display": "standalone",
-      "backgroundColor": "#ffffff",
-      "themeColor": "#4F46E5",
-      "startUrl": "/",
-      "scope": "/",
-      "orientation": "portrait",
-      "bundler": "metro",
-      "output": "single",
-      "lang": "id",
-      "publicPath": "/",
-      "preferRelatedApplications": false,
-      "relatedApplications": [],
-      "manifest": "./public/manifest.json",
-      "serviceWorker": {
-        "url": "/service-worker.js"
-      },
-      "meta": {
-        "apple-mobile-web-app-capable": "yes",
-        "apple-mobile-web-app-status-bar-style": "default",
-        "apple-mobile-web-app-title": "Card Go"
-      }
+      "bundler": "metro"
     },
     "plugins": ["expo-font"],
     "extra": {
