--- a/package.json
+++ b/package.json
@@ -17,33 +17,34 @@
     "@react-navigation/bottom-tabs": "^7.8.11",
     "@react-navigation/native": "^7.1.22",
     "@react-navigation/stack": "^7.6.9",
-    "expo": "~54.0.25",
+    "expo": "~54.0.27",
     "expo-constants": "~18.0.10",
-    "expo-dev-client": "~6.0.18",
-    "expo-device": "~8.0.9",
-    "expo-document-picker": "^14.0.7",
+    "expo-dev-client": "~6.0.20",
+    "expo-device": "~8.0.10",
+    "expo-document-picker": "~14.0.8",
     "expo-file-system": "~19.0.19",
     "expo-font": "~14.0.9",
-    "expo-haptics": "~15.0.7",
-    "expo-linear-gradient": "~15.0.7",
-    "expo-local-authentication": "~17.0.7",
-    "expo-notifications": "~0.32.13",
-    "expo-print": "~15.0.7",
-    "expo-sharing": "~14.0.7",
-    "expo-splash-screen": "~31.0.11",
-    "expo-status-bar": "~3.0.8",
+    "expo-haptics": "~15.0.8",
+    "expo-linear-gradient": "~15.0.8",
+    "expo-local-authentication": "~17.0.8",
+    "expo-notifications": "~0.32.14",
+    "expo-print": "~15.0.8",
+    "expo-sharing": "~14.0.8",
+    "expo-splash-screen": "~31.0.12",
+    "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-calendars": "^1.1313.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-get-random-values": "^2.0.0",
+    "react-native-get-random-values": "~1.11.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-web": "^0.21.0",
+    "react-native-worklets": "0.5.1",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
@@ -51,6 +52,9 @@
     "@types/uuid": "^10.0.0",
     "babel-preset-expo": "^54.0.7",
     "typescript": "~5.9.2"
+  },
+  "overrides": {
+    "react-native-safe-area-context": "~5.6.0"
   },
   "private": true
 }
